updated SearchInput js and css again to fix alignment

--- a/client/src/components/Search/SearchInput.css
+++ b/client/src/components/Search/SearchInput.css
@@ -1,5 +1,12 @@
 #crew {
     height: 36px;
+    width: 100%;
+}
+
+#crew-drop {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-bottom: 0px;
 }
 
 .btn-primary {
