--- a/client/src/pages/Manager/Search.css
+++ b/client/src/pages/Manager/Search.css
@@ -1,7 +1,7 @@
     .btn-brown {
         color: #fff;
-        background-color: #f58119;
-        border-color: #f58;
+        background-color: #60332a;
+        border-color: #60332a;
         margin: 0px 5px 0px 5px;
     }
     /* .btn {
@@ -9,8 +9,7 @@
     } */
 
     body {
-        background-color:grey;
-        
+        background-color: #5b5b5b;
     }
 
     .page {
